docs: Update the deprecation annotation for gtk_paint_spinner()

Bring it in line with the deprecation warning in the header.

https://bugzilla.gnome.org/show_bug.cgi?id=782396